Fix parameter order of linker and add goal 'make run'

--- a/exercises/solutions/generic_linked_list_tests/Makefile
+++ b/exercises/solutions/generic_linked_list_tests/Makefile
@@ -7,4 +7,4 @@ endif
 include $(EXERCISES_ROOT)/cpp.mk
 
 CFLAGS:=$(CFLAGS)  -I../generic_linked_list 
-LFLAGS:=$(LFLAGS) -lUnitTest++ -L.
+LFLAGS:=$(LFLAGS) -lUnitTest++
