--- a/exercises/solutions/generic_linked_list/generic_linked_list.project
+++ b/exercises/solutions/generic_linked_list/generic_linked_list.project
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<CodeLite_Project Name="generic_linked_list" InternalType="CPPP">
+<CodeLite_Project Name="generic_linked_list" InternalType="CPPP" Version="10.0.0">
   <Plugins>
     <Plugin Name="qmake">
       <![CDATA[00010001N0005Debug000000000000]]>
@@ -23,6 +23,7 @@
     <File Name="Makefile"/>
   </VirtualDirectory>
   <VirtualDirectory Name="src">
+    <File Name="List.cpp"/>
     <File Name="ListIterator.tpp"/>
     <File Name="ListIterator.hpp"/>
     <File Name="List.tpp"/>
