--- a/exercises/solutions/generic_linked_list_tests/generic_linked_list_tests.project
+++ b/exercises/solutions/generic_linked_list_tests/generic_linked_list_tests.project
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CodeLite_Project Name="generic_linked_list_tests" Version="10.0.0" InternalType="UnitTest++">
+  <VirtualDirectory Name="sut">
+    <File Name="../generic_linked_list/List.cpp"/>
+  </VirtualDirectory>
   <Plugins>
     <Plugin Name="qmake">
       <![CDATA[00010001N0005Debug000000000000]]>
@@ -11,6 +14,9 @@
     <File Name="Readme.txt"/>
     <File Name="main.cpp"/>
   </VirtualDirectory>
+  <Dependencies Name="Debug">
+    <Project Name="generic_linked_list"/>
+  </Dependencies>
   <Settings Type="Executable">
     <GlobalSettings>
       <Compiler Options="" C_Options="" Assembler="">
